--- a/src/views/tutorial.pug
+++ b/src/views/tutorial.pug
@@ -7,6 +7,6 @@ html(lang="en")
         title Hướng dẫn lấy link
     body
         video(src="UTF-8")
-        p(id="input") #{input}
-        ul(id="parent")
+        p(id="input" style="display:none;") #{input}
+        button(type="button" id="getLink") Get Link
         script(src="public/script/tutorial.js") 
