--- a/src/views/tutorial.pug
+++ b/src/views/tutorial.pug
@@ -15,8 +15,9 @@ html(lang="en")
   meta(property="og:image", content="https://cdn.glitch.global/78005c29-e32c-49c4-b98e-965192ce6623/Pa.png?v=1658000247165")        
   meta(property="og:url", content="https://shortet.glitch.me/")        
   meta(name="twitter:card", content="summary")    
-    body
-     video(src="UTF-8")
-     p(id="input" style="display:none;") #{input}
-     button(type="button" id="getLink") Get Link
-     script(src="public/script/tutorial.js") 
+  link(rel="stylesheet", href="/public/css/tutorial.css")           
+ body
+  video(src="UTF-8")
+  p(id="input" style="display:none;") #{input}
+  button(type="button" id="getLink") Get Link
+  script(src="public/script/tutorial.js") 
