--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,16 +17,17 @@ p{
   margin-left: 10%;
   margin-top:3%;
   margin-bottom:3%;
-  color:blue;
+  color:white;
 }
 ul {
   list-style-type: none;
 }
 li {
-  margin: 30px 0;
+  margin: 30px 30px 30px 0;
   font-size: auto;
   font-family: "Source Sans Pro", sans-serif;
   color: lightblue;
+  list-style-type: none;
 }
 a {
   color: inherit;
@@ -42,13 +43,6 @@ input {
   padding: 10px;
   border: 5px solid lightgrey;
   outline: none;
-}
-input[type="submit"],
-#buttoncopy {
-  padding-left: 30px;
-  padding-right: 30px;
-  cursor: pointer;
-  font-size: 30px;
 }
 input:focus {
   outline: none;
