--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -16,16 +16,24 @@ html(lang="en")
   meta(property="og:url", content="https://shortet.glitch.me/")        
   meta(name="twitter:card", content="summary")        
   link(rel="stylesheet", href="/public/css/style.css")
+  link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css")
  body
   .wrapper 
     img(height="50px" src="https://cdn.glitch.global/78005c29-e32c-49c4-b98e-965192ce6623/g322.png?v=1658003422948")
     h1 URL Shortener
     form(id="form")
-     input(type="text" id="link" placeholder="Enter your link")
-     input(type="text" id="name" placeholder="Custome link")
+     .input-group.mb-3
+      span(class="input-group-text" id="inputGroup-sizing-default") URL
+      input(type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" id="link" placeholder="Enter your link" required)
+     .input-group.mb-3
+      span(class="input-group-text" id="inputGroup-sizing-default") Custom
+      input(type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" id="name" placeholder="Custome link")
      p VD: https://shortet.glitch.me/yourCustom
-     input(type="submit", value="shorten it")
-    textarea(id="bar" style="display: none") 
-    button(class="btn",data-clipboard-action="cut", data-clipboard-target="#bar", id="buttoncopy")  Copy short link
+     <button type="submit" class="btn btn-secondary btn-lg">Shorten It</button>
+    button(class="btn btn-secondary btn-lg", data-clipboard-target="#bar", id="buttoncopy")  Copy short link
     ul(id="parent" class="shortLinks")
-  script(src="/public/script/script.js" type="module")
+    input(id="bar" style="opacity: 0; position: relative;") 
+  script(src="/public/script/script.js")
+  script(src="https://cdn.jsdelivr.net/npm/clipboard@2/dist/clipboard.min.js" type="text/javascript")
+  script let clipboard1 = new ClipboardJS('#buttoncopy');
+  script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js")
