--- a/public/css/tutorial.css
+++ b/public/css/tutorial.css
@@ -4,3 +4,23 @@
   padding: 0;
   box-sizing: border-box;
 }
+.container1{
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background-image: linear-gradient(135deg, rgb(30, 110, 162), salmon);
+  padding: 50px 0;
+}
+h1 {
+  font-size: 50px;
+  font-family: "Source Sans Pro", sans-serif;
+  color: white;
+  font-weight: 900;
+  font-size: auto;
+  text-transform: uppercase;
+}
+button{
+  margin-top: 50%;
+}
